bpo-35942: Delegate on PyOS_FSPath when checking for __fspath__ in path_converter